增加生产者filter(无环境暂时未测试)

--- a/dubbo-provider/src/main/resources/application.properties
+++ b/dubbo-provider/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.dubbo.registry.address=zookeeper://10.26.211.80:2181
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.protocol.port=20880
 spring.dubbo.scan=com.baojiong.dubbo.service
+
+spring.dubbo.provider.filter=providerFilter
